c_headers/H5public.h

/*
 * Status return values.  Failed integer functions in HDF5 result almost
 * always in a negative value (unsigned failing functions sometimes return
 * zero for failure) while successfull return is non-negative (often zero).
 * The negative failure value is most commonly -1, but don't bet on it.  The
 * proper way to detect failure is something like:
 *
 * 	if((dset = H5Dopen2(file, name)) < 0)
 *	    fprintf(stderr, "unable to open the requested dataset\n");
 */
typedef int herr_t;
/*
 * Boolean type.  Successful return values are zero (false) or positive
 * (true). The typical true value is 1 but don't bet on it.  Boolean
 * functions cannot fail.  Functions that return `htri_t' however return zero
 * (false), positive (true), or negative (failure). The proper way to test
 * for truth from a htri_t function is:
 *
 * 	if ((retval = H5Tcommitted(type))>0) {
 *	    printf("data type is committed\n");
 *	} else if (!retval) {
 * 	    printf("data type is not committed\n");
 *	} else {
 * 	    printf("error determining whether data type is committed\n");
 *	}
 */
/* #ifdef H5_HAVE_STDBOOL_H */
/*   #include <stdbool.h> */
/* #else /\* H5_HAVE_STDBOOL_H *\/ */
/*   #ifndef __cplusplus */
/*     #if defined(H5_SIZEOF_BOOL) && (H5_SIZEOF_BOOL != 0) */
/*       #define bool    _Bool */
/*     #else */
/*       #define bool    unsigned int */
/*     #endif */
/*     #define true    1 */
/*     #define false   0 */
/*   #endif /\* __cplusplus *\/ */
/* #endif /\* H5_HAVE_STDBOOL_H *\/ */
typedef bool hbool_t;
/* Functions in H5.c */
herr_t H5open(void);