src/nimhdf5/H5Tpublic.nim

##  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *
##  Copyright by The HDF Group.                                               *
##  Copyright by the Board of Trustees of the University of Illinois.         *
##  All rights reserved.                                                      *
##                                                                            *
##  This file is part of HDF5.  The full HDF5 copyright notice, including     *
##  terms governing use, modification, and redistribution, is contained in    *
##  the COPYING file, which can be found at the root of the source code       *
##  distribution tree, or in https://support.hdfgroup.org/ftp/HDF5/releases.  *
##  If you do not have access to either file, you may request a copy from     *
##  help@hdfgroup.org.                                                        *
##  * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *

{.deadCodeElim: on.}
## 
##  This file contains public declarations for the H5T module.
## 

##  Public headers needed by this file

import
  H5public, H5Ipublic, H5nimtypes

when not declared(libname):
  const
    libname* = "libhdf5.so"


# before we can import any of the variables, from the already shared library
# we need to make sure that they are defined. The library needs to be
# initialized. Thus we include
include H5niminitialize


template HOFFSET*(S, M: untyped): untyped =
  (offsetof(S, M))

##  These are the various classes of datatypes
##  If this goes over 16 types (0-15), the file format will need to change)

type
  H5T_class_t* {.size: sizeof(cint).} = enum
    H5T_NO_CLASS = - 1,          ## error
    H5T_INTEGER = 0,            ## integer types
    H5T_FLOAT = 1,              ## floating-point types
    H5T_TIME = 2,               ## date and time types
    H5T_STRING = 3,             ## character string types
    H5T_BITFIELD = 4,           ## bit field types
    H5T_OPAQUE = 5,             ## opaque types
    H5T_COMPOUND = 6,           ## compound types
    H5T_REFERENCE = 7,          ## reference types
    H5T_ENUM = 8,               ## enumeration types
    H5T_VLEN = 9,               ## Variable-Length types
    H5T_ARRAY = 10,             ## Array types
    H5T_NCLASSES              ## this must be last


##  Byte orders

type
  H5T_order_t* {.size: sizeof(cint).} = enum
    H5T_ORDER_ERROR = - 1,       ## error
    H5T_ORDER_LE = 0,           ## little endian
    H5T_ORDER_BE = 1,           ## bit endian
    H5T_ORDER_VAX = 2,          ## VAX mixed endian
    H5T_ORDER_MIXED = 3,        ## Compound type with mixed member orders
    H5T_ORDER_NONE = 4


##  Types of integer sign schemes

type
  H5T_sign_t* {.size: sizeof(cint).} = enum
    H5T_SGN_ERROR = - 1,         ## error
    H5T_SGN_NONE = 0,           ## this is an unsigned type
    H5T_SGN_2 = 1,              ## two's complement
    H5T_NSGN = 2


##  Floating-point normalization schemes

type
  H5T_norm_t* {.size: sizeof(cint).} = enum
    H5T_NORM_ERROR = - 1,        ## error
    H5T_NORM_IMPLIED = 0,       ## msb of mantissa isn't stored, always 1
    H5T_NORM_MSBSET = 1,        ## msb of mantissa is always 1
    H5T_NORM_NONE = 2


## 
##  Character set to use for text strings.  Do not change these values since
##  they appear in HDF5 files!
## 

type
  H5T_cset_t* {.size: sizeof(cint).} = enum
    H5T_CSET_ERROR = - 1,        ## error
    H5T_CSET_ASCII = 0,         ## US ASCII
    H5T_CSET_UTF8 = 1,          ## UTF-8 Unicode encoding
    H5T_CSET_RESERVED_2 = 2,    ## reserved for later use
    H5T_CSET_RESERVED_3 = 3,    ## reserved for later use
    H5T_CSET_RESERVED_4 = 4,    ## reserved for later use
    H5T_CSET_RESERVED_5 = 5,    ## reserved for later use
    H5T_CSET_RESERVED_6 = 6,    ## reserved for later use
    H5T_CSET_RESERVED_7 = 7,    ## reserved for later use
    H5T_CSET_RESERVED_8 = 8,    ## reserved for later use
    H5T_CSET_RESERVED_9 = 9,    ## reserved for later use
    H5T_CSET_RESERVED_10 = 10,  ## reserved for later use
    H5T_CSET_RESERVED_11 = 11,  ## reserved for later use
    H5T_CSET_RESERVED_12 = 12,  ## reserved for later use
    H5T_CSET_RESERVED_13 = 13,  ## reserved for later use
    H5T_CSET_RESERVED_14 = 14,  ## reserved for later use
    H5T_CSET_RESERVED_15 = 15


const
  H5T_NCSET* = H5T_CSET_RESERVED_2

## 
##  Type of padding to use in character strings.  Do not change these values
##  since they appear in HDF5 files!
## 

type
  H5T_str_t* {.size: sizeof(cint).} = enum
    H5T_STR_ERROR = - 1,         ## error
    H5T_STR_NULLTERM = 0,       ## null terminate like in C
    H5T_STR_NULLPAD = 1,        ## pad with nulls
    H5T_STR_SPACEPAD = 2,       ## pad with spaces like in Fortran
    H5T_STR_RESERVED_3 = 3,     ## reserved for later use
    H5T_STR_RESERVED_4 = 4,     ## reserved for later use
    H5T_STR_RESERVED_5 = 5,     ## reserved for later use
    H5T_STR_RESERVED_6 = 6,     ## reserved for later use
    H5T_STR_RESERVED_7 = 7,     ## reserved for later use
    H5T_STR_RESERVED_8 = 8,     ## reserved for later use
    H5T_STR_RESERVED_9 = 9,     ## reserved for later use
    H5T_STR_RESERVED_10 = 10,   ## reserved for later use
    H5T_STR_RESERVED_11 = 11,   ## reserved for later use
    H5T_STR_RESERVED_12 = 12,   ## reserved for later use
    H5T_STR_RESERVED_13 = 13,   ## reserved for later use
    H5T_STR_RESERVED_14 = 14,   ## reserved for later use
    H5T_STR_RESERVED_15 = 15


const
  H5T_NSTR* = H5T_STR_RESERVED_3

##  Type of padding to use in other atomic types

type
  H5T_pad_t* {.size: sizeof(cint).} = enum
    H5T_PAD_ERROR = - 1,         ## error
    H5T_PAD_ZERO = 0,           ## always set to zero
    H5T_PAD_ONE = 1,            ## always set to one
    H5T_PAD_BACKGROUND = 2,     ## set to background value
    H5T_NPAD = 3


##  Commands sent to conversion functions

type
  H5T_cmd_t* {.size: sizeof(cint).} = enum
    H5T_CONV_INIT = 0,          ## query and/or initialize private data
    H5T_CONV_CONV = 1,          ## convert data from source to dest datatype
    H5T_CONV_FREE = 2


##  How is the `bkg' buffer used by the conversion function?

type
  H5T_bkg_t* {.size: sizeof(cint).} = enum
    H5T_BKG_NO = 0,             ## background buffer is not needed, send NULL
    H5T_BKG_TEMP = 1,           ## bkg buffer used as temp storage only
    H5T_BKG_YES = 2


##  Type conversion client data

type
  H5T_cdata_t* = object
    command*: H5T_cmd_t        ## what should the conversion function do?
    need_bkg*: H5T_bkg_t       ## is the background buffer needed?
    recalc*: hbool_t           ## recalculate private data
    priv*: pointer             ## private data
  

##  Conversion function persistence

type
  H5T_pers_t* {.size: sizeof(cint).} = enum
    H5T_PERS_DONTCARE = - 1,     ## wild card
    H5T_PERS_HARD = 0,          ## hard conversion function
    H5T_PERS_SOFT = 1


##  The order to retrieve atomic native datatype

type
  H5T_direction_t* {.size: sizeof(cint).} = enum
    H5T_DIR_DEFAULT = 0,        ## default direction is inscendent
    H5T_DIR_ASCEND = 1,         ## in inscendent order
    H5T_DIR_DESCEND = 2


##  The exception type passed into the conversion callback function

type
  H5T_conv_except_t* {.size: sizeof(cint).} = enum
    H5T_CONV_EXCEPT_RANGE_HI = 0, ## source value is greater than destination's range
    H5T_CONV_EXCEPT_RANGE_LOW = 1, ## source value is less than destination's range
    H5T_CONV_EXCEPT_PRECISION = 2, ## source value loses precision in destination
    H5T_CONV_EXCEPT_TRUNCATE = 3, ## source value is truncated in destination
    H5T_CONV_EXCEPT_PINF = 4,   ## source value is positive infinity(floating number)
    H5T_CONV_EXCEPT_NINF = 5,   ## source value is negative infinity(floating number)
    H5T_CONV_EXCEPT_NAN = 6


##  The return value from conversion callback function H5T_conv_except_func_t

type
  H5T_conv_ret_t* {.size: sizeof(cint).} = enum
    H5T_CONV_ABORT = - 1,        ## abort conversion
    H5T_CONV_UNHANDLED = 0,     ## callback function failed to handle the exception
    H5T_CONV_HANDLED = 1


##  Variable Length Datatype struct in memory
##  (This is only used for VL sequences, not VL strings, which are stored in char *'s)

type
  hvl_t* = object
    len*: csize                ##  Length of VL data (in base type units)
    p*: pointer                ##  Pointer to VL data
  

##  Variable Length String information

const
  H5T_VARIABLE* = ((csize)(- 1)) ##  Indicate that a string is variable length (null-terminated in C, instead of fixed length)

##  Opaque information

const
  H5T_OPAQUE_TAG_MAX* = 256

##  This could be raised without too much difficulty

##  All datatype conversion functions are...

type
  H5T_conv_t* = proc (src_id: hid_t; dst_id: hid_t; cdata: ptr H5T_cdata_t; nelmts: csize;
                   buf_stride: csize; bkg_stride: csize; buf: pointer; bkg: pointer;
                   dset_xfer_plist: hid_t): herr_t {.cdecl.}

##  Exception handler.  If an exception like overflow happenes during conversion,
##  this function is called if it's registered through H5Pset_type_conv_cb.
## 

type
  H5T_conv_except_func_t* = proc (except_type: H5T_conv_except_t; src_id: hid_t;
                               dst_id: hid_t; src_buf: pointer; dst_buf: pointer;
                               user_data: pointer): H5T_conv_ret_t {.cdecl.}

##  When this header is included from a private header, don't make calls to H5open()

# when not defined(H5private_H):
#   const
#     H5OPEN* = H5open()
# else:
#   const
#     H5OPEN* = true
## 
##  The IEEE floating point types in various byte orders.
##

var H5T_IEEE_F32BE_g* {.importc: "H5T_IEEE_F32BE_g", dynlib: libname.}: hid_t

var H5T_IEEE_F32LE_g* {.importc: "H5T_IEEE_F32LE_g", dynlib: libname.}: hid_t

var H5T_IEEE_F64BE_g* {.importc: "H5T_IEEE_F64BE_g", dynlib: libname.}: hid_t

var H5T_IEEE_F64LE_g* {.importc: "H5T_IEEE_F64LE_g", dynlib: libname.}: hid_t

let
  H5T_IEEE_F32BE* = H5T_IEEE_F32BE_g
  H5T_IEEE_F32LE* = H5T_IEEE_F32LE_g
  H5T_IEEE_F64BE* = H5T_IEEE_F64BE_g
  H5T_IEEE_F64LE* = H5T_IEEE_F64LE_g


## 
##  These are "standard" types.  For instance, signed (2's complement) and
##  unsigned integers of various sizes and byte orders.
## 

var H5T_STD_I8BE_g* {.importc: "H5T_STD_I8BE_g", dynlib: libname.}: hid_t

var H5T_STD_I8LE_g* {.importc: "H5T_STD_I8LE_g", dynlib: libname.}: hid_t

var H5T_STD_I16BE_g* {.importc: "H5T_STD_I16BE_g", dynlib: libname.}: hid_t

var H5T_STD_I16LE_g* {.importc: "H5T_STD_I16LE_g", dynlib: libname.}: hid_t

var H5T_STD_I32BE_g* {.importc: "H5T_STD_I32BE_g", dynlib: libname.}: hid_t

var H5T_STD_I32LE_g* {.importc: "H5T_STD_I32LE_g", dynlib: libname.}: hid_t

var H5T_STD_I64BE_g* {.importc: "H5T_STD_I64BE_g", dynlib: libname.}: hid_t

var H5T_STD_I64LE_g* {.importc: "H5T_STD_I64LE_g", dynlib: libname.}: hid_t

var H5T_STD_U8BE_g* {.importc: "H5T_STD_U8BE_g", dynlib: libname.}: hid_t

var H5T_STD_U8LE_g* {.importc: "H5T_STD_U8LE_g", dynlib: libname.}: hid_t

var H5T_STD_U16BE_g* {.importc: "H5T_STD_U16BE_g", dynlib: libname.}: hid_t

var H5T_STD_U16LE_g* {.importc: "H5T_STD_U16LE_g", dynlib: libname.}: hid_t

var H5T_STD_U32BE_g* {.importc: "H5T_STD_U32BE_g", dynlib: libname.}: hid_t

var H5T_STD_U32LE_g* {.importc: "H5T_STD_U32LE_g", dynlib: libname.}: hid_t

var H5T_STD_U64BE_g* {.importc: "H5T_STD_U64BE_g", dynlib: libname.}: hid_t

var H5T_STD_U64LE_g* {.importc: "H5T_STD_U64LE_g", dynlib: libname.}: hid_t

var H5T_STD_B8BE_g* {.importc: "H5T_STD_B8BE_g", dynlib: libname.}: hid_t

var H5T_STD_B8LE_g* {.importc: "H5T_STD_B8LE_g", dynlib: libname.}: hid_t

var H5T_STD_B16BE_g* {.importc: "H5T_STD_B16BE_g", dynlib: libname.}: hid_t

var H5T_STD_B16LE_g* {.importc: "H5T_STD_B16LE_g", dynlib: libname.}: hid_t

var H5T_STD_B32BE_g* {.importc: "H5T_STD_B32BE_g", dynlib: libname.}: hid_t

var H5T_STD_B32LE_g* {.importc: "H5T_STD_B32LE_g", dynlib: libname.}: hid_t
